tests/invalid/trait/deriving_keyword_reserved_as_function.facet
fn deriving() -> unrestricted isize {
  0
}

fn main() -> unrestricted isize {
  (deriving)
}
